ingress/argo.yaml
kind: Service
apiVersion: v1
metadata:
  name: argo-server
  namespace: webserver
spec:
  type: ExternalName
  externalName: argo-server.argo.svc.cluster.local
  ports:
    - port: 2746
