ingress/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: webserver
  labels:
      app: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: express
  namespace: webserver
  labels:
      app: express
spec:
  selector:
    app: express
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: webserver
  labels:
      app: backend
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
