ingress/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: webserver
  annotations:
      kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: csi.cmkl.ac.th
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
