ingress/minimal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: webserver
  annotations:
    nginx.ingress.kubernetes.io/cache-enable: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /(|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: webserver
                port:
                  number: 3000
          - path: /express(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: express
                port:
                  number: 3000
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
